added hostIP to swarm so scanning of the network works when accessing via DNS, added preload and caching for woff2 font

--- a/main/http_server/axe-os/src/index.html
+++ b/main/http_server/axe-os/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- preload font -->
+  <link rel="preload" href="/assets/open-sans-v40-latin-regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 </head>
 <body>
   <app-root></app-root>
